# gpu-temperature-guard

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/ui/: menu.cpp
